Made test cases